# Snnai-Music-Player

./: .gitignore  README.md
snnai-music-player/: index.html  package-lock.json  package.json
snnai-music-player/src/: App.tsx  index.css  store.ts  supabase.ts  types.ts
snnai-music-player/src-tauri/: Cargo.toml  tauri.conf.json
snnai-music-player/src-tauri/capabilities/: default.json
snnai-music-player/src-tauri/icons/: icon.icns
snnai-music-player/src-tauri/src/: db.rs  lib.rs  main.rs
snnai-music-player/src/components/: AuthModal.tsx  BottomNav.tsx  HistoryRecommendations.tsx  LyricsPanel.tsx  PlayerBar.tsx  PlaylistView.tsx  QueuePanel.tsx  RecommendationsSection.tsx  SearchView.tsx  SettingsModal.tsx  Sidebar.tsx  TrackRow.tsx
snnai-music-player/src/hooks/: useHorizontalScroll.ts  useMediaSession.ts
snnai-music-player/src/lib/: audioProcessor.ts  vocalRemover.worker.ts
snnai-website/: index.css  index.html  index.js  reset-password.html
src-tauri/src/: lib.rs
